# cookiecutter-pybase

./: CHANGELOG.md  LICENSE  README.md  cookiecutter.json
.hooks/: post_gen_project.py
hooks/: post_gen_project.py
{{ cookiecutter.project_slug }}/: .env  README.md  makefile  pyproject.toml
{{ cookiecutter.project_slug }}/docs/code/: schema.md
{{ cookiecutter.project_slug }}/docs/getting-started/: changelog.md
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/: app_main.py  typer_main.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/core/: settings.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/typer_commands/: hello.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/utils/: custom_logger.py  fstats.py
{{cookiecutter.project_slug}}/{{ cookiecutter.project_slug }}/: .gitignore  makefile  mkdocs.yml  pyproject.toml
{{cookiecutter.project_slug}}/{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/: {{ cookiecutter.project_slug }}.py
{{cookiecutter.project_slug}}/{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/core/: config.py
{{cookiecutter.project_slug}}/{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/schema/: config.py  example.py
{{cookiecutter.project_slug}}/{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/utils/: custom_logger.py
