[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.project_short_description }}"
authors = ["{{ cookiecutter.github_username }} <{{ cookiecutter.github_username }}@pm.me>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.8.1"
coloredlogs = "^15.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pylint = "^2.7.2"
mkdocs-material = "^7.0.6"
mkdocstrings = "^0.15.0"
pytest = "6.2.2"
{% if cookiecutter.use_typer_cli|lower == 'y' %}
typer = "0.3.2"{%- endif %}
{% if cookiecutter.use_rich|lower == 'y' %}
rich = "^9.13.0"{%- endif %}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.poetry.scripts]
start = "{{ cookiecutter.project_slug }}.main:main"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov={{ cookiecutter.project_slug }}"
python_files = 'test_*'
python_classes = '*Tests'
python_functions = 'test_*'
testpaths = [
    "tests",
]