[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.version }}"
description = ""
authors = ["{{ cookiecutter.github_username }} <{{ cookiecutter.github_username }}@pm.me>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.8.1"
coloredlogs = "^15.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pylint = "^2.7.2"
mkdocs-material = "^7.0.6"
mkdocstrings = "^0.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
